Reverted to fixed navbar with a fix for overlapping items on medium screens for certain languages.

--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -1,5 +1,6 @@
 body,
 p.bg-dark,
+nav.navbar,
 .navbar-toggler.bg-dark,
 .step.bg-dark,
 ul {
